// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trait snapshot renders 1`] = `
<div>
  <span>
    <pure(DragHandleIcon) />
  </span>
  <div>
    <div>
      Trait Label
    </div>
    <EditableHtml
      markup="Category"
      onChange={[Function]}
      placeholder="Trait Label"
      pluginProps={
        Object {
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
        }
      }
    />
  </div>
  <div>
    Standard(s)
  </div>
  <div>
    Description
  </div>
  <div
    key="score-point-label-0"
  >
    <div>
      0
    </div>
    <EditableHtml
      markup="C"
      onChange={[Function]}
      placeholder="Label"
      pluginProps={
        Object {
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
        }
      }
    />
  </div>
  <div
    key="score-point-label-1"
  >
    <div>
      1
    </div>
    <EditableHtml
      markup="B"
      onChange={[Function]}
      placeholder="Label"
      pluginProps={
        Object {
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
        }
      }
    />
  </div>
  <div
    key="score-point-label-2"
  >
    <div>
      2
    </div>
    <EditableHtml
      markup="A"
      onChange={[Function]}
      placeholder="Label"
      pluginProps={
        Object {
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
        }
      }
    />
  </div>
  <div>
    <WithStyles(IconButton)
      color="default"
    >
      <pure(RemoveCircleIcon)
        classes={
          Object {
            "root": undefined,
          }
        }
      />
    </WithStyles(IconButton)>
  </div>
</div>
`;

exports[`Trait snapshot renders without standards 1`] = `
<div>
  <span>
    <pure(DragHandleIcon) />
  </span>
  <div>
    <div>
      Trait Label
    </div>
    <EditableHtml
      markup="Category"
      onChange={[Function]}
      placeholder="Trait Label"
      pluginProps={
        Object {
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
        }
      }
    />
  </div>
  <div>
    Description
  </div>
  <div
    key="score-point-label-0"
  >
    <div>
      0
    </div>
    <EditableHtml
      markup="C"
      onChange={[Function]}
      placeholder="Label"
      pluginProps={
        Object {
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
        }
      }
    />
  </div>
  <div
    key="score-point-label-1"
  >
    <div>
      1
    </div>
    <EditableHtml
      markup="B"
      onChange={[Function]}
      placeholder="Label"
      pluginProps={
        Object {
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
        }
      }
    />
  </div>
  <div
    key="score-point-label-2"
  >
    <div>
      2
    </div>
    <EditableHtml
      markup="A"
      onChange={[Function]}
      placeholder="Label"
      pluginProps={
        Object {
          "image": Object {
            "disabled": true,
          },
          "math": Object {
            "disabled": true,
          },
        }
      }
    />
  </div>
  <div>
    <WithStyles(IconButton)
      color="default"
    >
      <pure(RemoveCircleIcon)
        classes={
          Object {
            "root": undefined,
          }
        }
      />
    </WithStyles(IconButton)>
  </div>
</div>
`;
